# pyjupiter

./: README.md  pyproject.toml
jupiter/: magic_trick.py  main.py  tests.py
jupiter/pyinotify/: pyproject.toml
jupiter/routers/: home.py  ships.py
jupiter/watchgod/: pyproject.toml
